# kyunet

./: .gitignore  CMakeLists.txt  README.md
all_test/: 02_tensor_test.cpp  03_test_add_data_flatten.cpp  04_net_test.cpp  05_test_denseLayer.cpp  05_test_denseLayer_forward.cpp  06_test_operation.cpp  07_im2col_test.cpp  08_test_convlayer.cpp  08_test_convlayer_forward.cpp  09_sim_conv_backprop.cpp  10_test_distribute.cpp  11_test_filler.cpp  12_test_relu_layer_forward.cpp  13_test_sigmoid_layer_forward.cpp  14_test_pooling_forward.cpp  14_test_pooling_method.cpp  15_test_softmax_layer.cpp  16_test_dense_softmax_layer.cpp  17_test_cross_entropy_with_softmax_layer.cpp  18_test_pooling_backward.cpp  19_test_convLayer_backward.cpp  20_test_conv_pooling_dense_crossLoss.cpp  21_test_mnist_load_batch.cpp  22_test_mnist_load_batch_add_batchNorm.cpp  23_test_serialize_deserialize.cpp  24_test_save_load_model.cpp  CMakeLists.txt  im2col_test.cpp  load_imabe_test.cpp  net_test.cpp  sim_conv_backprop.cpp  tensor_test.cpp  test_add_data_flatten.cpp  test_convlayer.cpp  test_denseLayer.cpp  test_operation.cpp
all_test/test_utils/: CMakeLists.txt  test_utils.cpp  test_utils.h
cmake_utils/test_for_cuda/: CMakeLists.txt  cuda_test.cu
cmake_utils/test_for_cudnn/: CMakeLists.txt  test_cudnn.cpp
example/test/: CMakeLists.txt  test.cpp
example_data/mnist/: train_images.list  training_file.txt
example_data/mnist/cat_train_images/: 0.list  1.list  train_0_1.list
inc/: LayerParams.hpp  activation.h  common_inc.h  convLayer.h  conv_arithmetic.h  definitions.h  denseLayer.h  fc_layer.h  filler.h  filler.hpp  inc_thirdparty.h  initializer.h  inputLayer.h  layer.h  layer_abstract.h  mkt_log.h  mkt_log.hpp  net.h  operation.h  params.h  tensor.h
inc/activator/: activator.h  relu.h  relu_act.h  sigmoid_act.h
inc/help_func/: helper.hpp
inc/layer/: batchNorm.h  batchNorm_layer.h  conv_layer.h  cross_entropy_loss_with_softmax_layer.h  denseLayer.h  dense_layer.h  input_layer.h  layer.h  loss_layer.h  pooling_layer.h  relu_layer.h  sigmoid_layer.h  softmax_layer.h
inc/operations/: aux_operations.h  bn_operations.h  conv_operations.h  mat_operations.h  pooling_operations.h  softmax_operations.h
inc/operators/: aux_operators.h  mat_operators.h
inc/solver/: sgd_solver.h  solver.h
python_script/: categorize_mnist.py  parse_mnist.py  preprocess_mnist_list.py
src/: conv_arithmetic.cpp  fc_layer.cpp  inputLayer.cpp  layer.cpp  layer_abstract.cpp  mkt_log.cpp  net.cpp  operation.cpp  tensor.cpp
src/activator/: relu.cpp  sigmoid.cpp
src/layer/: batchNorm.cpp  batchNorm_layer.cpp  convLayer.cpp  conv_layer.cpp  cross_entropy_loss_with_softmax_layer.cpp  denseLayer.cpp  dense_layer.cpp  inputLayer.cpp  input_layer.cpp  layer.cpp  loss_layer.cpp  pooling_layer.cpp  relu_layer.cpp  sigmoid_layer.cpp  softmax_layer.cpp
src/operators/: aux_operations.cpp  aux_operators.cpp  bn_operations.cpp  conv_operations.cpp  mat_operations.cpp  mat_operators.cpp  pooling_operations.cpp  softmax_operations.cpp
src/solver/: sgd_solver.cpp
utils/: fileio.hpp  folder_file_utils.hpp  test_utils.hpp  utils.hpp
